mType/tests/testFiles/class/error/abstract_class_cannot_instantiate.mt
// Test: Cannot instantiate abstract class
// Expected error: Cannot instantiate abstract class 'Vehicle'

abstract class Vehicle {
    abstract function start(): void;
}

// This should cause an error
Vehicle v = new Vehicle();
